--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t tobsirl/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run tobsirl/react-test npm test -- --coverage
+  - docker run -e CI=true USERNAME/react-test npm run test
 
 after_success:
   - docker build -t tobsirl/multi-client ./client
