--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
   - docker build -t tobsirl/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true tobsirl/react-test npm test
+
 after_success:
   - docker build -t tobsirl/multi-client ./client
   - docker build -t tobsirl/multi-nginx ./nginx
